<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/verde"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTituloPantalla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/into"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ingre"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/verde3"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titu"
                android:textColor="#388E3C"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/etTituloInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Escri"
                android:padding="12dp"
                android:textSize="16sp"
                android:backgroundTint="#4CAF50"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/verde3"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Descripción"
                android:textColor="#388E3C"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/etDescripcionInicio"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="top"
                android:hint="@string/E"
                android:padding="12dp"
                android:textSize="16sp"
                android:backgroundTint="#4CAF50"/>
        </LinearLayout>


        <Button
            android:id="@+id/btnGuardarInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guar"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="14dp"
            android:backgroundTint="@color/celeste"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/la"
            android:textColor="#555555"
            android:textSize="14sp"
            android:padding="12dp"
            android:gravity="center"
            android:background="#F1F8F4"/>

    </LinearLayout>
</ScrollView>