<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FDF6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/verde"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bien"
                android:textColor="#A5D6A7"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accede_cuenta"
                android:textColor="#e8f5e9"
                android:textSize="15sp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_marginTop="-15dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:padding="24dp"
                android:elevation="5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitulo"
                    android:textStyle="bold"
                    android:textColor="#2E7D32"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/etUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ing"
                    android:padding="14dp"
                    android:textSize="16sp"
                    android:backgroundTint="#66BB6A"
                    android:layout_marginTop="8dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contra"
                    android:textStyle="bold"
                    android:textColor="#2E7D32"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ingresa tu contraseña"
                    android:inputType="textPassword"
                    android:padding="14dp"
                    android:textSize="16sp"
                    android:backgroundTint="#66BB6A"
                    android:layout_marginTop="8dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp">

                    <Button
                        android:id="@+id/btnLoginProductor"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:text="@string/productor"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:backgroundTint="@color/celeste"
                        android:layout_marginEnd="6dp"/>

                    <Button
                        android:id="@+id/btnLoginAdmin"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:text="@string/comite"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:backgroundTint="@color/azul"
                        android:layout_marginStart="6dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>