<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- CONTENIDO PRINCIPAL -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDEDED">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- HEADER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/fondo2">

                <ImageView
                    android:id="@+id/imgPerfil"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginBottom="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logoagro" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/mas"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- BOTÓN MENÚ -->
                <ImageView
                    android:id="@+id/btnMenu"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginEnd="10dp"
                    android:src="@android:drawable/ic_menu_sort_by_size" />

            </LinearLayout>

            <!-- IMAGEN 1 -->
            <ImageView
                android:id="@+id/imgQueEs"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="12dp"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_gallery" />

            <!-- TEXTO 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#DDE8D6"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/que"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtQueEs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/carg"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#B7D321" />

            <!-- IMAGEN 2 -->
            <ImageView
                android:id="@+id/imgBeneficios"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="12dp"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_gallery" />

            <!-- TEXTO 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#DDE8D6"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bene"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBeneficios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/carg"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#B7D321" />

            <!-- REDES SOCIALES -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#DDE8D6"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/txtInstagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inst"
                    android:textColor="#1B5E20"
                    android:paddingTop="10dp"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/txtFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/face"
                    android:textColor="#1B5E20"
                    android:paddingTop="10dp"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/txtWhatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what"
                    android:textColor="#1B5E20"
                    android:paddingTop="10dp"
                    android:textSize="15sp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- MENÚ LATERAL -->
    <LinearLayout
        android:id="@+id/menuLateral"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF">

        <include layout="@layout/menu_lateral" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>