<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.cliente.MainActivity">

    <!-- CONTENIDO PRINCIPAL -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8F5E9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <!-- HEADER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="0dp"
                android:background="@drawable/fondo2"
                android:padding="0dp">
                <ImageView
                    android:id="@+id/imgPerfil"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="1dp"
                    android:layout_marginBottom="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logoagro" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_mercado"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/subtitulo_mercado"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btnMenu"
                        android:layout_width="34dp"
                        android:textStyle="bold"

                        android:layout_height="34dp"

                        android:src="@android:drawable/ic_menu_sort_by_size"/>

                    <ImageView
                        android:id="@+id/btnFiltro"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="6dp"

                        android:textStyle="bold"
                        android:src="@android:drawable/ic_menu_manage"/>
                </LinearLayout>

            </LinearLayout>

            <!-- HISTORIA -->
            <TextView
                android:id="@+id/txtTituloHistoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/borde_negro"
                android:textColor="#FFF"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txtHistoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borde_blanco_sombra"
                android:padding="20dp"
                android:textColor="#4E342E"
                android:textSize="14sp"
                android:paddingBottom="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"/>


            <!-- PRODUCTOS -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_productos"
                android:background="@drawable/borde_negro"
                android:textColor="#FFF"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"/>

            <!-- BUSCADOR -->

            <!-- RECYCLER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_busqueda"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_search" />

                <EditText
                    android:id="@+id/etBuscar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Buscar productos" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerProductos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <!-- MENU LATERAL -->
    <include
        android:id="@+id/menuLateral"
        layout="@layout/menu_lateral"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"/>

    <!-- MENU FILTROS -->
    <include
        android:id="@+id/menuFiltro"
        layout="@layout/menu_filtro"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"/>

</androidx.drawerlayout.widget.DrawerLayout>